# ch57x-keyboard-tool-gui

./: Cargo.toml  LICENSE  README.md  example-mapping.yaml
.github/workflows/: release-on-tag.yaml  release.yaml
cli/: Cargo.toml
cli/src/: config.rs  main.rs
gui/: Cargo.toml  build.rs
gui/src/: main.rs
